syntax = "proto3";
import "google/protobuf/empty.proto";
// each class is defined in each own file, inside a common package
option java_multiple_files = true;
option java_package = "services";

package primesservice; // package do proto


service Service {
    rpc login(ProtoUser) returns (SessionId);
    rpc close(SessionId) returns (google.protobuf.Empty);
    rpc sendImage(Image) returns (ImageId);
    rpc listUserImages(SessionId) returns (UserImages);
    rpc requestOCR(OCRequest) returns (OCReply);
}

message OCRequest{
    string imageId = 1;
    SessionId user = 2;
}

message OCReply{
    string result = 1;
}
message Image{
    bytes image = 1;
    string imageName =2;
    string contentType =3;
    SessionId user = 4;
}

message UserImages {
    // list of topic names
    repeated string imageId = 1;
}

message ImageId {
    string imageId = 1;
    bool failed = 2;
    string errorMsg = 3;
}

    message ProtoUser {
    string username = 1;
    string accountType = 2;
}
message SessionId {
    string id = 1;
    bool isPremium = 2;
    bool credentials = 3;
    bool alreadyLoggedIn = 4;
}